# application-tracker

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.backend-dev.yaml  docker-compose.frontend-dev.yaml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
.github/workflows/: deploy-dev.yml  staging.yml
ansible/: ansible.cfg  deploy-dev.yml  hosts
api/: mixins.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
api/migrations/: 0001_initial.py  0002_alter_applicationphase_name.py  0003_remove_applicationphase_offered_salary_and_more.py  0004_alter_applicationphase_date.py  0005_alter_applicationphase_date.py  0006_alter_applicationphase_options_and_more.py  0007_alter_applicationphase_name.py  0008_alter_applicationphase_options_application_url.py  0009_application_job_description.py
application_tracker/: manage.py
application_tracker/api/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
application_tracker/applications/: admin.py  apps.py  urls.py
application_tracker/preferences/: admin.py  apps.py  services.py  signals.py  urls.py
application_tracker/project/: api_urls.py  asgi.py  celery.py  urls.py  wsgi.py
client/: next.config.js  package-lock.json  package.json
core/: s3_storage.py  settings.py  urls.py
frontend/: package-lock.json  package.json  tailwind.config.js
scripts/: entrypoint.sh  production_data.py  worker-entrypoint.sh
server/: app.py  config.py  database.db  database.py  email_confirmation.html  mail.py  main.py  models.py  requirements.txt  test_client.py
users/: admin.py  managers.py  serializers.py  tests.py  urls.py
(+120 files in other folders)
